tests/pass/enums/data.tox
enum List {
    Head(List),
    Tail
}
 

fn main() {
    let list = List::Head(List::Head(List::Tail));
} 