tests/fail/enum/mising_inner.tox
enum List {
    Head(int),
    Tail
}

fn main() {
    let foo = List::Tail(10);
}